apply plugin: 'com.android.application'
apply plugin: 'com.google.gms.google-services'
def apikeyPropertiesFile = rootProject.file("ais.properties");
def apikeyProperties = new Properties()
apikeyProperties.load(new FileInputStream(apikeyPropertiesFile))

android {
    compileSdkVersion 29
    buildToolsVersion '29.0.3'
    defaultConfig {
        applicationId "pl.sviete.dom"
        minSdkVersion 22
        targetSdkVersion 29
        versionCode 161
        versionName '2.0.7.TV'
        renderscriptTargetApi 16
        renderscriptSupportModeEnabled true
        multiDexEnabled true
    }
    compileOptions {
        sourceCompatibility 1.8
        targetCompatibility 1.8
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    flavorDimensions "version"
    productFlavors {
        market {
            dimension "version"
            applicationIdSuffix ""
            targetSdkVersion 29
        }

        gate {
            dimension "version"
            applicationIdSuffix "client"
            targetSdkVersion 24
        }
    }
    signingConfigs {
        debug {
            storeFile file('../ais-dom-keystore.jks')
            storePassword apikeyProperties['RELEASE_STORE_PASSWORD']
            keyAlias 'key0'
            keyPassword apikeyProperties['RELEASE_STORE_PASSWORD']
        }
        release {
            storeFile file('../ais-dom-keystore.jks')
            storePassword apikeyProperties['RELEASE_STORE_PASSWORD']
            keyAlias 'key0'
            keyPassword apikeyProperties['RELEASE_STORE_PASSWORD']
        }
    }
}


repositories {
    maven { url "https://jitpack.io" }
    mavenCentral()
    jcenter()
}


dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation 'androidx.appcompat:appcompat:1.3.1'
    implementation "androidx.work:work-runtime:2.6.0-alpha02"
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'com.google.android.material:material:1.4.0'
    implementation 'com.koushikdutta.async:androidasync:3.0.8'

    implementation 'com.google.android.exoplayer:exoplayer-core:2.14.0'
    implementation 'com.google.android.exoplayer:exoplayer-dash:2.14.0'
    implementation 'com.google.android.exoplayer:exoplayer-hls:2.14.0'
    implementation 'com.google.android.exoplayer:exoplayer:2.14.0'
    implementation 'com.google.android.exoplayer:exoplayer-ui:2.14.0'
    implementation 'com.google.android.exoplayer:extension-ima:2.14.0'
    implementation 'com.google.android.exoplayer:exoplayer-rtsp:2.14.0'


    implementation 'com.github.zagum:Android-SwitchIcon:1.3.8'
    implementation 'me.dm7.barcodescanner:zbar:1.9.13'
    implementation 'com.redbooth:WelcomeCoordinator:1.0.1'
    implementation project(path: ':porcupine')
    implementation 'com.google.firebase:firebase-analytics:19.0.0'
    implementation 'com.google.firebase:firebase-messaging:21.0.1'
    implementation 'com.google.android.gms:play-services-location:18.0.0'
    implementation 'com.android.volley:volley:1.2.0'
    implementation 'androidx.preference:preference:1.1.1'
    implementation 'org.videolan.android:libvlc-all:3.3.4'

}


android {
    lintOptions {
        checkReleaseBuilds false
        // Or, if you prefer, you can continue to check for errors in release builds,
        // but continue the build even when errors are found:
        abortOnError false
    }
}
